<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:isScrollContainer="true"
    tools:context=".ui.LoanFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\nИНСТРУКЦИЯ\n\nИНСТРУКЦИЯ\n\nИНСТРУКЦИЯ\n\nИНСТРУКЦИЯ\n\nИНСТРУКЦИЯ\n\n"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:endIconDrawable="@drawable/ic_clear_24"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/amount_layout"
            app:layout_constraintEnd_toStartOf="@+id/lastname_layout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction"
            app:layout_constraintVertical_bias="0.15">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:maxLength="20" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastname_layout"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:endIconDrawable="@drawable/ic_clear_24"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="@+id/name_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/name_layout"
            app:layout_constraintTop_toTopOf="@+id/name_layout"
            app:layout_constraintVertical_bias="0.15">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname_hint"
                android:inputType="textPersonName"
                android:maxLength="20" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_layout"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/max_amount_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:expandedHintEnabled="false"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/number_layout"
            app:layout_constraintEnd_toEndOf="@+id/name_layout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/name_layout"
            app:layout_constraintTop_toBottomOf="@+id/name_layout"
            app:layout_constraintVertical_bias="0.15">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="8" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/period_layout"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/period_hint"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:expandedHintEnabled="false"
            app:hintEnabled="true"
            app:layout_constraintBottom_toBottomOf="@+id/amount_layout"
            app:layout_constraintEnd_toStartOf="@+id/percent_layout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="@+id/lastname_layout"
            app:layout_constraintTop_toBottomOf="@+id/lastname_layout"
            app:layout_constraintVertical_bias="1.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/period"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/percent_layout"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/percent_hint"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:expandedHintEnabled="false"
            app:hintEnabled="true"
            app:layout_constraintBottom_toBottomOf="@+id/period_layout"
            app:layout_constraintEnd_toEndOf="@+id/lastname_layout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="4"
            app:layout_constraintStart_toEndOf="@+id/period_layout"
            app:layout_constraintTop_toTopOf="@+id/period_layout"
            app:layout_constraintVertical_bias="1.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/percent"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_layout"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconDrawable="@drawable/ic_clear_24"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/apply_loan_button"
            app:layout_constraintEnd_toEndOf="@+id/percent_layout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/amount_layout"
            app:layout_constraintTop_toBottomOf="@+id/amount_layout"
            app:layout_constraintVertical_bias="0.15">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_hint"
                android:inputType="phone"
                android:maxLength="12" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/apply_loan_button"
            style="@style/PrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:indeterminate="true"
            android:scaleY="2"
            android:visibility="gone"
            app:indicatorColor="@color/yellow_500"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/item_loan"
            layout="@layout/item_loan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/done_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/done_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/baseline_done_outline_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/item_loan"
            app:layout_constraintStart_toStartOf="@+id/item_loan"
            app:layout_constraintTop_toBottomOf="@+id/item_loan" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>